--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.7.0",
     "morgan": "^1.10.0",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
